--- a/index.html
+++ b/index.html
@@ -1,3 +1,12 @@
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <title>Mi Pagina</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
+  </head>
+  <body class="p-3">
+  <!-- v -->
 <div class="container">
   <h1>Hola, mi nombre es Casandra.</h1>
   <div class="alert alert-warning">
@@ -30,3 +39,8 @@
     </div>
   </div>
 </div>
+
+
+  <!-- ^ -->
+  </body>
+</html>
