--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
         <img class="card-img-top" src="img/image.jpg" alt="imagen de...">
         <div class="card-body">
           <h1>Letras</h1>
+          <p>Estudio el Profesorado y la Licenciatura en Letras modernas. Este año termino la Tecnicatura en Corrección Literaria.</p>
+          <a href="https://blogs.ffyh.unc.edu.ar/ingreso-ffyh/carreras/letras-modernas-2/">De qué se trata mi carrera.</a>
         </div>
       </div>
     </div>
@@ -26,6 +28,8 @@
         <img class="card-img-top" src="img/image.jpg" alt="imagen de...">
         <div class="card-body">
           <h1>Programación</h1>
+          <p>Tengo conocimientos básicos de html, porque cuando era más chica me gustaba hacer mi propio perfil en páginas como Tumblr o Neopets, que te permiten crear tu propio código. Quiero aprender Javascript y seguir adentrandome en el mundo de la programación.</p>
+          <a href="https://github.com/casandra22">@casandra22 en Github</a>
         </div>
       </div>
     </div>
@@ -34,6 +38,14 @@
         <img class="card-img-top" src="img/image.jpg" alt="imagen de...">
         <div class="card-body">
           <h1>Otros intereses</h1>
+          <ol>
+            <li>
+              Diseño
+            </li>
+            <li>
+              Dibujo/Pintura
+            </li>
+          </ol>
         </div>
       </div>
     </div>
