--- a/actividad1/index.html
+++ b/actividad1/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Dibujo</title>
+    <title>Mi Pagina</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
   </head>
   <body class="p-3">
@@ -20,6 +20,21 @@
     </ul>
   </div>
 </nav>
+
+<hr>
+
+<div class="row">
+  <div class="col">
+    <div class="card">
+      <div class="card-body">
+        <strong>texto...</strong>
+      </div>
+    </div>
+  </div>
+  <div class="col">
+    <img src="img/rainbow.png" alt="imagen de...">
+  </div>
+</div>
 
 
   <!-- ^ -->
