--- a/actividad1/index.html
+++ b/actividad1/index.html
@@ -12,7 +12,7 @@
   <div class="collapse navbar-collapse">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item">
-        <a class="nav-link" href="http://duckduckgo.com">Mis dibujos</a>
+        <a class="nav-link" href="http://duckduckgo.com">Sobre mí</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="http://duckduckgo.com">Mi inspiración</a>
