--- a/actividad1/index.html
+++ b/actividad1/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Mi Pagina</title>
+    <title>Dibujos</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
   </head>
   <body class="p-3">
@@ -12,7 +12,7 @@
   <div class="collapse navbar-collapse">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item">
-        <a class="nav-link" href="index.html">Mis dibujos</a>
+        <a class="nav-link" href="index.html">Sobre mí</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="inspiracion.html">Mi inspiración</a>
