--- a/actividad1/index.html
+++ b/actividad1/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Dibujos</title>
+    <title>Mi Pagina</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
   </head>
   <body class="p-3">
@@ -32,7 +32,7 @@
     </div>
   </div>
   <div class="col">
-    <img src="img/rainbow.png" alt="imagen de...">
+    <img src="actividad1/IMG_20200322_105812.jpg" alt="imagen de...">
   </div>
 </div>
 
@@ -40,3 +40,4 @@
   <!-- ^ -->
   </body>
 </html>
+
