--- a/actividad1/index.html
+++ b/actividad1/index.html
@@ -32,7 +32,7 @@
     </div>
   </div>
   <div class="col">
-    <img src="IMG_20200322_105812.jpg" alt="imagen de...">
+    <img src="canvas.png" alt="imagen de un dibujo mio">
   </div>
 </div>
 
