--- a/actividad1/inspiracion.html
+++ b/actividad1/inspiracion.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Dibujos - Inspiración</title>
+    <title>Inspiración</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
   </head>
   <body class="p-3">
@@ -27,25 +27,25 @@
   <div class="col">
     <div class="card">
       <div class="card-body">
-        <h1>Titulo</h1>
+        <h1><a href="https://www.instagram.com/chuwenjie/">Chuwenjie</a></h1>
       </div>
-      <img class="card-img-bottom" src="img/image.jpg" alt="imagen de...">
+      <img class="card-img-bottom" src="https://ballpitmag.files.wordpress.com/2017/12/crop.jpg?w=640&amp;h=640" alt="imagen de...">
     </div>
   </div>
   <div class="col">
     <div class="card">
       <div class="card-body">
-        <h1>Titulo</h1>
+        <h1><a href="https://www.instagram.com/dirtyrobot/">Dirtyrobot</a></h1>
       </div>
-      <img class="card-img-bottom" src="img/image.jpg" alt="imagen de...">
+      <img class="card-img-bottom" src="https://pbs.twimg.com/media/C6lXo5vU8AEkQUD.jpg" alt="imagen de...">
     </div>
   </div>
   <div class="col">
     <div class="card">
       <div class="card-body">
-        <h1>Titulo</h1>
+        <h1><a href="https://www.instagram.com/uhcaribe/">UH! works</a></h1>
       </div>
-      <img class="card-img-bottom" src="img/image.jpg" alt="imagen de...">
+      <img class="card-img-bottom" src="https://scontent.fcor2-1.fna.fbcdn.net/v/t1.0-9/p960x960/36261877_10155754060870819_8120261106225643520_o.jpg?_nc_cat=111&amp;_nc_sid=9e2e56&amp;_nc_ohc=ptgMujAXb6MAX9d627G&amp;_nc_ht=scontent.fcor2-1.fna&amp;_nc_tp=6&amp;oh=d89d640e9a3acf07d881cbe565418f18&amp;oe=5E9ED8A7" alt="imagen de...">
     </div>
   </div>
 </div>
@@ -54,25 +54,25 @@
   <div class="col">
     <div class="card">
       <div class="card-body">
-        <h1>Titulo</h1>
+        <h1><a href="https://www.instagram.com/chinaocho/">Chinaocho</a></h1>
       </div>
-      <img class="card-img-bottom" src="img/image.jpg" alt="imagen de...">
+      <img class="card-img-bottom" src="https://i.pinimg.com/736x/cf/73/e3/cf73e316cec2e24313f5bdbe69e80a61.jpg" alt="imagen de...">
     </div>
   </div>
   <div class="col">
     <div class="card">
       <div class="card-body">
-        <h1>Titulo</h1>
+        <h1><a href="https://www.instagram.com/pepitasandwich/">Pepitasandwich</a></h1>
       </div>
-      <img class="card-img-bottom" src="img/image.jpg" alt="imagen de...">
+      <img class="card-img-bottom" src="https://pbs.twimg.com/media/Dztb_N_WoAYPf_3.jpg" alt="imagen de...">
     </div>
   </div>
   <div class="col">
     <div class="card">
       <div class="card-body">
-        <h1>Titulo</h1>
+        <h1><a href="https://www.instagram.com/pedro_luis_deformer/">Pedro L. Deformer</a></h1>
       </div>
-      <img class="card-img-bottom" src="img/image.jpg" alt="imagen de...">
+      <img class="card-img-bottom" src="https://scontent-lga3-1.cdninstagram.com/v/t51.2885-15/sh0.08/e35/s640x640/76854850_154065259212354_982010414896691527_n.jpg?_nc_ht=scontent-lga3-1.cdninstagram.com&amp;_nc_cat=106&amp;_nc_ohc=ncpETF-3xgoAX_TGy_J&amp;oh=1ae9120fe8234206d0b3906b62b3562f&amp;oe=5E9943FA" alt="imagen de...">
     </div>
   </div>
 </div>
