--- a/actividad1/index.html
+++ b/actividad1/index.html
@@ -27,7 +27,7 @@
   <div class="col">
     <div class="card">
       <div class="card-body">
-        <strong>Hola, soy Casandra. Me encanta dibujar desde que tengo memoria. No tengo mucho tiempo para hacerlo porque estudio una carrera que implica leer mucho, pero trato de darme tiempitos para bocetear algunas cosas. No soy de terminar mis dibujos así que me costó encontrar un dibujo que estuiviera más o menos completo. Hace poco pude compraarme una tableta digitalizadora y, con suerte, voy a poder hacer dibujos que parezcan más profesionales en la compu.</strong>
+        <strong>Hola, soy Casandra. Me encanta dibujar desde que tengo memoria. No tengo mucho tiempo para hacerlo porque estudio una carrera que implica leer mucho, pero trato de darme tiempitos para bocetear algunas cosas. No soy de terminar mis dibujos así que me costó encontrar un dibujo que estuiviera más o menos completo. Hace poco pude compraarme una tableta digitalizadora y, con suerte, voy a poder hacer dibujos que parezcan más profesionales en la compu. En la pestaña de Inspiración puse algunos de los artistas que sigo más de cerca en las redes sociales porque me gusta mucho sus formas de dibbujar. Mi meta para este año (y esta cuarentena) es lograr un estilo un poco más definido que mi actual y quizás hasta crearme una cuenta de Instagram de dibujos. Mis materiales favoritos son las acuarelas y acrílicos.</strong>
       </div>
     </div>
   </div>
