--- a/actividad3/index.html
+++ b/actividad3/index.html
@@ -31,7 +31,7 @@
 			<input type"password" class="form-control" placeholder="Password"></input>
 		</div>
 
-		<div class="alert alert-danger mt-3">Wrong user or password</div>
+		<div class="alert alert-danger mt-3 text-center">Wrong user or password</div>
 
 		<button class="btn btn-primary w-100">Login</button>
 	</div>
