--- a/actividad4/index.html
+++ b/actividad4/index.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-	<h1>Si hay datos hay tabla</h1>
+	<h1>Si hay datos, hay tabla</h1>
 	<!-- probando comentario :) -->
 	<h2>Tabla simple</h2>
 	<p>Tabla - cuerpo - fila - celda </p>
