--- a/actividad6/index.html
+++ b/actividad6/index.html
@@ -35,7 +35,7 @@
 						href="https://dioramafreak.com">Diorama freak</a>. </p>
 			</div>
 			<div class="col-sm-12 col-md-3 border">
-				<img src="darkest.png" class="rounded float-left img-fluid" alt="Responsive image" >
+				<img src="darkest.PNG" class="rounded float-left img-fluid" alt="Responsive image" >
 				<p class="epigrafe">Diorama de Chantal Wilson, mejor conocida como <a href= "http://darkestravendesigns.com/">Darkest Raven Desings</a>"</p>
 			</div>
 		</div>
