--- a/actividad6/index.html
+++ b/actividad6/index.html
@@ -4,59 +4,86 @@
 <head>
 	<title>Diorama</title>
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
-	<link rel="stylesheet" href="style.css"/>
+	<link rel="stylesheet" href="style.css" />
 </head>
 
 <body>
-	<h1>dio</h1>
-	<h1>ra</h1>
-	<h1>ma</h1>
-	<hr>
-	<p>"Un diorama es una modalidad de maqueta en el que se escenifica algún tipo de situación. En otras palabras, es un
-		espacio escénico de tamaño normalmente reducido que sirve para representar en tres dimensiones realidades muy
-		diversas, como belenes, episodios históricos, hábitats naturales, espacios urbanos, etc.
-
-		Estas maquetas se usan habitualmente en el medio escolar, pero también en los museos, en las salas de
-		exposiciones o entre los aficionados al coleccionismo que quieren escenificar su afición por un tema concreto.
-
-		En cuanto al vocablo diorama, proviene del griego y literalmente quiere decir a través de la vista." (Fuente:
-		Definición ABC) </p>
-	<hr>
-	<div class="container">
-		<div class="row mb-12 justify-content-center">
-			<div class="col-sm-12 col-md-3 border">
-				<img src="http://4.bp.blogspot.com/-jnxbqIOhqJ4/UEouMBwNgrI/AAAAAAAABdM/ZgDWWLn8dNg/s1600/DSC06018.JPG" class="rounded float-left img-fluid" alt="Responsive image" >
-				<p class="epigrafe">Diorama hecho por Nico Blomme de <a
-						href="https://thedioramaworld.blogspot.com/?view=timeslide#!">The diorama world</a>.</p>
-			</div>
-			<div class="col-sm-12 col-md-3 border">
-				<img src="https://dioramafreakdotcom.files.wordpress.com/2020/04/basurero2.jpg?w=256&h=300" class="rounded float-left img-fluid" alt="Responsive image" >
-				<p class="epigrafe">Minuatura de basurero, parte de un diorama en proceso de Jorge Carlos Barrientos, en <a
-						href="https://dioramafreak.com">Diorama freak</a>. </p>
-			</div>
-			<div class="col-sm-12 col-md-3 border">
-				<img src="darkest.PNG" class="rounded float-left img-fluid" alt="Responsive image" >
-				<p class="epigrafe">Diorama de Chantal Wilson, mejor conocida como <a href= "http://darkestravendesigns.com/">Darkest Raven Desings</a>"</p>
+	<h1>dio<br>ra<br>ma</h1>
+		<hr>
+		<div class="container mb-2">
+			<div class="row text-center">
+				<div class="col"><a href="link">Inicio</a></div>/
+				<div class="col"><a href="https://www.definicionabc.com/general/diorama.php">+Info</a></div>/
+				<div class="col"><a href="https://casandra22.github.io/actividad1/">Sobre mí</a></div>
 			</div>
 		</div>
-	</div>
+		<hr>
+		<p>"Un diorama es una modalidad de maqueta en el que se escenifica algún tipo de situación. En otras palabras,
+			es un
+			espacio escénico de tamaño normalmente reducido que sirve para representar en tres dimensiones realidades
+			muy
+			diversas, como belenes, episodios históricos, hábitats naturales, espacios urbanos, etc.
 
-	<div class="container">
-		<div class="row mb-12 justify-content-center">
-			<div class="col-sm-12 col-md-3 border">
-				<img src="http://4.bp.blogspot.com/-jnxbqIOhqJ4/UEouMBwNgrI/AAAAAAAABdM/ZgDWWLn8dNg/s1600/DSC06018.JPG" class="rounded float-left img-fluid" alt="Responsive image" >
-				<p class="epigrafe">One of three columns</p>
-			</div>
-			<div class="col-sm-12 col-md-3 border">
-				<img src="http://4.bp.blogspot.com/-jnxbqIOhqJ4/UEouMBwNgrI/AAAAAAAABdM/ZgDWWLn8dNg/s1600/DSC06018.JPG" class="rounded float-left img-fluid" alt="Responsive image" >
-				<p class="epigrafe">One of three columns</p>
-			</div>
-			<div class="col-sm-12 col-md-3 border">
-				<img src="http://4.bp.blogspot.com/-jnxbqIOhqJ4/UEouMBwNgrI/AAAAAAAABdM/ZgDWWLn8dNg/s1600/DSC06018.JPG" class="rounded float-left img-fluid" alt="Responsive image" >
-				<p class="epigrafe">One of three columns</p>
+			Estas maquetas se usan habitualmente en el medio escolar, pero también en los museos, en las salas de
+			exposiciones o entre los aficionados al coleccionismo que quieren escenificar su afición por un tema
+			concreto.
+
+			En cuanto al vocablo diorama, proviene del griego y literalmente quiere decir a través de la vista."
+			(Fuente:
+			Definición ABC) </p>
+		<hr>
+		<div class="container">
+			<div class="row mb-12 justify-content-center">
+				<div class="col-sm-12 col-md-3 border">
+					<img src="nico.jpeg" class="rounded float-left img-fluid" alt="Responsive image" >
+					<p class="epigrafe">Diorama hecho por Nico Blomme de <a
+							href="https://thedioramaworld.blogspot.com/?view=timeslide#!">The diorama world</a>.</p>
+				</div>
+				<div class="col-sm-12 col-md-3 border">
+					<img src="cocina.jpeg" class="rounded float-left img-fluid" alt="Responsive image" >
+					<p class="epigrafe">Detalle de cocina de Aida Pravia Martin, en <a
+							href="https://instagram.com/aidapramar?igshid=tcu459hyxikl">@aidapramar</a>. </p>
+				</div>
+				<div class="col-sm-12 col-md-3 border">
+					<img src="tren.jpeg" class="rounded float-left img-fluid" alt="Responsive image" >
+					<p class="epigrafe">Diorama de un tren, hecho por José Manuel Gómez García, de<a
+							href="trainscape.blogspot.com">Trainscape</a>.</p>
+				</div>
 			</div>
 		</div>
-	</div>
+
+		<div class="container">
+			<div class="row mb-12 justify-content-center">
+				<div class="col-sm-12 col-md-3 border">
+					<img src="vecindad.jpeg" class="rounded float-left img-fluid" alt="Responsive image" >
+					<p class="epigrafe">Diorama de "la vecindad" del programa <i>El chavo del ocho</i>, hecho por
+						Antonio Junior, en <a
+							href="https://instagram.com/antoniojuniordioramas?igshid=1d1occgh9aleg">@antoniojuniordioramas</a>.
+					</p>
+				</div>
+				<div class="col-sm-12 col-md-3 border">
+					<img src="fernandorojas.jpeg" class="rounded float-left img-fluid" alt="Responsive image" >
+					<p class="epigrafe">Diorama de Fernando Rojas, en <a
+							href="https://instagram.com/fernandorojas._?igshid=1kbet2vekgwuo"> @fernandorojas._</a>.</p>
+				</div>
+				<div class="col-sm-12 col-md-3 border">
+					<img src="landsofglass.jpeg" class="rounded float-left img-fluid" alt="Responsive image" >
+					<p class="epigrafe">Casa de baño estilo japonés de Basia Wesolowska, en <a
+							href="https://instagram.com/landsofglass?igshid=15u6bl4xn67le">Lands of glass</a>.</p>
+				</div>
+			</div>
+		</div>
+
+		<hr>
+		<div class="container mb-2">
+			<div class="row text-center">
+				<div class="col"><a href="link">Inicio</a></div>/
+				<div class="col"><a href="https://www.definicionabc.com/general/diorama.php">+Info</a></div>/
+				<div class="col"><a href="https://casandra22.github.io/actividad1/">Sobre mí</a></div>
+			</div>
+		</div>
+		<hr>
+<p class="end">Todas las imágenes utilizadas les pertenecen a sus creadores mencionados.</p>
 </body>
 
 </html>
