--- a/actividad6/index.html
+++ b/actividad6/index.html
@@ -12,7 +12,7 @@
 		<hr>
 		<div class="container mb-2">
 			<div class="row text-center">
-				<div class="col"><a href="link">Inicio</a></div>/
+				<div class="col"><a href="#">Inicio</a></div>/
 				<div class="col"><a href="https://www.definicionabc.com/general/diorama.php">+Info</a></div>/
 				<div class="col"><a href="https://casandra22.github.io/actividad1/">Sobre mí</a></div>
 			</div>
@@ -77,7 +77,7 @@
 		<hr>
 		<div class="container mb-2">
 			<div class="row text-center">
-				<div class="col"><a href="link">Inicio</a></div>/
+				<div class="col"><a href="#">Inicio</a></div>/
 				<div class="col"><a href="https://www.definicionabc.com/general/diorama.php">+Info</a></div>/
 				<div class="col"><a href="https://casandra22.github.io/actividad1/">Sobre mí</a></div>
 			</div>
