--- a/actividad6/index.html
+++ b/actividad6/index.html
@@ -34,17 +34,17 @@
 		<hr>
 		<div class="container">
 			<div class="row mb-12 justify-content-center">
-				<div class="col-sm-12 col-md-3 border">
+				<div class="col-sm-12 col-md-3">
 					<img src="nico.jpeg" class="rounded float-left img-fluid" alt="Responsive image" >
 					<p class="epigrafe">Diorama hecho por Nico Blomme de <a
 							href="https://thedioramaworld.blogspot.com/?view=timeslide#!">The diorama world</a>.</p>
 				</div>
-				<div class="col-sm-12 col-md-3 border">
+				<div class="col-sm-12 col-md-3">
 					<img src="cocina.jpeg" class="rounded float-left img-fluid" alt="Responsive image" >
 					<p class="epigrafe">Detalle de cocina de Aida Pravia Martin, en <a
 							href="https://instagram.com/aidapramar?igshid=tcu459hyxikl">@aidapramar</a>. </p>
 				</div>
-				<div class="col-sm-12 col-md-3 border">
+				<div class="col-sm-12 col-md-3">
 					<img src="tren.jpeg" class="rounded float-left img-fluid" alt="Responsive image" >
 					<p class="epigrafe">Diorama de un tren, hecho por José Manuel Gómez García, de<a
 							href="trainscape.blogspot.com">Trainscape</a>.</p>
@@ -54,19 +54,19 @@
 
 		<div class="container">
 			<div class="row mb-12 justify-content-center">
-				<div class="col-sm-12 col-md-3 border">
+				<div class="col-sm-12 col-md-3">
 					<img src="vecindad.jpeg" class="rounded float-left img-fluid" alt="Responsive image" >
 					<p class="epigrafe">Diorama de "la vecindad" del programa <i>El chavo del ocho</i>, hecho por
 						Antonio Junior, en <a
 							href="https://instagram.com/antoniojuniordioramas?igshid=1d1occgh9aleg">@antoniojuniordioramas</a>.
 					</p>
 				</div>
-				<div class="col-sm-12 col-md-3 border">
+				<div class="col-sm-12 col-md-3">
 					<img src="fernandorojas.jpeg" class="rounded float-left img-fluid" alt="Responsive image" >
 					<p class="epigrafe">Diorama de Fernando Rojas, en <a
 							href="https://instagram.com/fernandorojas._?igshid=1kbet2vekgwuo"> @fernandorojas._</a>.</p>
 				</div>
-				<div class="col-sm-12 col-md-3 border">
+				<div class="col-sm-12 col-md-3">
 					<img src="landsofglass.jpeg" class="rounded float-left img-fluid" alt="Responsive image" >
 					<p class="epigrafe">Casa de baño estilo japonés de Basia Wesolowska, en <a
 							href="https://instagram.com/landsofglass?igshid=15u6bl4xn67le">Lands of glass</a>.</p>
